--- a/lichThi.html
+++ b/lichThi.html
@@ -465,7 +465,6 @@
 
         <!-- MAIN CONTENT -->
         <div id="content">
-
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <h1 class="page-title txt-color-blueDark">
@@ -513,11 +512,11 @@
             </div>
 
             <div class="page-title">
-                <h1 class="text-center">Học kỳ 1 - Năm: 2022-2023</h1>
+                <h2 class="text-center btn-grad">Học kỳ 1 - Năm: 2022-2023</h2>
             </div>
 
             <div class="alert alert-warning fade in">
-                <i class="fa-fw fa fa-info"></i>
+                <i class="fa-fw fa fa-warning"></i>
                 <strong>Chú ý:</strong> Cần chọn đúng năm học học kỳ để xem lịch thi chính xác.
             </div>
             <div class="alert alert-info fade in">
@@ -543,7 +542,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr title="Cơ sở lập trình">
                                     <td>
                                         1
                                     </td>
@@ -555,9 +554,10 @@
                                     <td>07:30</td>
                                     <td>90</td>
                                     <td>E1-05.08</td>
-                                    <td>Phòng lý thuyết, hình thức: Tự luận</td>
+                                    <td title="Phòng lý thuyết, hình thức: Tự luận">Phòng lý thuyết, hình thức: Tự luận
+                                    </td>
                                 </tr>
-                                <tr>
+                                <tr title="Thực hành Kỹ thuật lập trình">
                                     <td>
                                         2
                                     </td>
@@ -569,7 +569,7 @@
                                     <td>09:30</td>
                                     <td>90</td>
                                     <td>E2-02.02</td>
-                                    <td>Phòng thực hành</td>
+                                    <td title="Phòng thực hành">Phòng thực hành</td>
                                 </tr>
                             </tbody>
                         </table>
