--- a/lopHoc.html
+++ b/lopHoc.html
@@ -510,8 +510,8 @@
                 <!-- END SELECT      -->
             </div>
             <!--     BANNER  -->
-            <div class="alert alert-custom fade in">
-                <h2 class="text-center">Học Kỳ 1, Năm: 2022 - 2023</h2>
+            <div class="page-title">
+                <h2 class="text-center btn-grad">Học Kỳ 1, Năm: 2022 - 2023</h2>
             </div>
             <!-- END BANNER -->
             <div class="alert alert-info fade in">
@@ -526,7 +526,8 @@
                         <p><strong>Chuyên ngành: </strong><span>Công nghệ thông tin</span></p>
                         <p><strong>Lớp: </strong><span>22DTHA4</span></p>
                         <p><strong>Thành viên: </strong><span>40</span></p>
-                        <p><strong>Chức vụ lớp: </strong><span>Không có</span></p>
+                        <p><strong>Số tín chỉ: </strong><span>10</span></p>
+
                     </div>
 
                     <div class="col-xs-12 divider">
@@ -537,7 +538,7 @@
                         <p><strong>Xếp hạng: </strong><span title="hạng thứ 23/40 có điểm cao nhất lớp">23</span>
                         </p>
                         <p><strong>Nghỉ học: </strong><span>3</span></p>
-                        <p><strong>Số tín chỉ: </strong><span>10</span></p>
+                        <p><strong>Chức vụ lớp: </strong><span>Không có</span></p>
                         <p><strong>Tín chỉ đạt được: </strong><span>9</span><strong
                                 title="Lưu ý: Còn 1 tín chỉ chưa học" style="color: red;">
                                 (&#8727)</strong></p>
