ThoiKhoaBieu - them cac button va chinh sua 1 ti

--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -466,13 +466,30 @@
         <!-- MAIN CONTENT -->
         <div id="content">
             <div class="row">
-                <div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
+                <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
                     <h1 class="page-title txt-color-blueDark">
                         <i class="fa fa-table fa-fw "></i>
                         Thời Khóa Biểu
                     </h1>
                 </div>
+                <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7" style="margin-bottom: 15px;">
+                    <div class="row">
+                        <div class="col-md-1 col-lg-1 col-sm-1 col-xs-3 text-center" style="padding: 0;">
+                            <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-chevron-left"></i></a>
+                        </div>
+                        <div class="col-md-10 col-lg-10 col-sm-10 col-xs-6 text-center">
+                            <p style="font-size: 17px; padding-top: 5px;">Từ <strong>02/02/2023</strong> đến
+                                <strong>08/02/2023</strong>
+                            </p>
+                        </div>
+                        <div class="col-md-1 col-lg-1 col-sm-1 col-xs-3 text-center" style="padding: 0;">
+                            <a class="btn btn-primary" href="javascript:void(0);"><i
+                                    class="fa fa-chevron-right"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <!-- alert info -->
             <div class="alert alert-info fade in" style="margin-bottom: 5px;">
                 <i class="fa-fw fa fa-info"></i>
@@ -505,7 +522,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Tiết 1 <div>6:45 - 7h15</div>
+                                    <td>Tiết 1 <div>6:45 - 7:15</div>
                                     </td>
                                     <th class="go-to-school" rowspan="3" title="Bóng rổ 1">Bóng rổ 1</th>
                                     <td></td>
