them modal vao thoikhoabieu

--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -504,6 +504,8 @@
                 mới nhất!
             </div>
 
+            <!-- THOI KHOA BIEU -->
+
             <div class="well">
                 <div class="row">
                     <div class=" table-responsive">
@@ -524,7 +526,11 @@
                                 <tr>
                                     <td>Tiết 1 <div>6:45 - 7:15</div>
                                     </td>
-                                    <th class="go-to-school" rowspan="3" title="Bóng rổ 1">Bóng rổ 1</th>
+                                    <td class="go-to-school" rowspan="3" title="Bóng rổ 1" data-toggle="modal"
+                                        data-target="#myModal1"><strong>Bóng rổ 15</strong>
+                                        <p>Phòng: <strong>E1-02.02</strong>
+                                        </p>
+                                    </td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
@@ -535,11 +541,19 @@
                                 <tr>
                                     <td>Tiết 2 <div>7:15 - 8:00</div>
                                     </td>
-                                    <th rowspan="5" class="go-to-school" title="Tiếng anh 2">Tiếng anh 2</th>
+                                    <td rowspan="5" class="go-to-school" title="Tiếng anh 2"><strong>Tiếng anh
+                                            2</strong>
+                                        <p>Phòng: <strong>E1-02.09</strong>
+                                        </p>
+                                    </td>
                                     <td></td>
                                     <td></td>
-                                    <th rowspan="5" class="go-to-school" title="Quốc phòng, an ninh 4">Quốc phòng, an
-                                        ninh 4</th>
+                                    <td rowspan="5" class="go-to-school" title="Quốc phòng, an ninh 4"><strong>Quốc
+                                            phòng, an
+                                            ninh 4</strong>
+                                        <p>Phòng: <strong>E1-01.19</strong>
+                                        </p>
+                                    </td>
                                     <td></td>
                                     <td></td>
 
@@ -560,9 +574,10 @@
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                    <th rowspan="3" class="go-to-school" title="Kiểm tra bóng rổ 1"><span
-                                            style="color: red;">Kiểm tra</span> bóng
-                                        rổ 1</th>
+                                    <td rowspan="3" class="go-to-school" title="Kiểm tra bóng rổ 1"><span
+                                            style="color: red;">Kiểm tra </span><strong>bóng rổ 1</strong>
+                                        <p>Phòng: <strong>R2-03.12</strong></p>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>Tiết 5 <div>9:45 - 10:30</div>
@@ -583,12 +598,17 @@
                                 <tr>
                                     <td>Tiết 7 <div>12:30 - 13:15</div>
                                     </td>
-                                    <th rowspan="5" class="go-to-school" title="Thực hành kỹ thuật lập trình">Thực hành
-                                        kỹ thuật lập trình</th>
+                                    <td rowspan="5" class="go-to-school" title="Thực hành kỹ thuật lập trình">
+                                        <strong>Thực hành kỹ thuật lập trình</strong>
+                                        <p>Phòng: <strong>E2-12.02</strong></p>
+                                    </td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                    <th rowspan="5" class="go-to-school" title="Toán cao cấp">Toán cao cấp</th>
+                                    <td rowspan="5" class="go-to-school" title="Toán cao cấp">
+                                        <strong>Toán cao cấp</strong>
+                                        <p>Phòng: <strong>E2-05.12</strong></p>
+                                    </td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -636,9 +656,48 @@
 
         </div>
         <!-- END MAIN CONTENT -->
-
     </div>
     <!-- END MAIN PANEL -->
+
+
+
+
+
+
+
+    <div class="modal fade in" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true" style="display: none; padding-right: 17px;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        ×
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Thông tin chi tiết</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="text-center">Bóng rổ 1</h1>
+                            <p>Phòng: E1-02.12</p>
+                            <p>Phòng: E1-02.12</p>
+                            <p>Phòng: E1-02.12</p>
+                            <p>Phòng: E1-02.12</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        Cancel
+                    </button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div>
+
+
 
     <!-- PAGE FOOTER -->
     <div class="page-footer">
